// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: RadioButtons default render with selected value 1`] = `
<div
  class="ui buttons"
>
  <button
    type="button"
    class="ui active button"
    role="button"
  >
    5
  </button>
  <button
    type="button"
    class="ui button"
    role="button"
  >
    10
  </button>
  <button
    type="button"
    class="ui button"
    role="button"
  >
    15
  </button>
</div>
`;

exports[`Component: RadioButtons default render without selected value 1`] = `
<div
  class="ui buttons"
>
  <button
    type="button"
    class="ui button"
    role="button"
  >
    5
  </button>
  <button
    type="button"
    class="ui button"
    role="button"
  >
    10
  </button>
  <button
    type="button"
    class="ui button"
    role="button"
  >
    15
  </button>
</div>
`;
